results/SpecGenBench/0-shot/log-NumberOfCutsSeq-2023_11_28_23_45_53.txt
class NumberOfCutsSeq {
    //@ requires n >= 0;
    //@ ensures \result >= 0;
    public int numberOfCuts(int n) {
        //@ assert n >= 0;
        //@ assert n % 2 == 0 || n % 2 != 0;
        //@ assert n == 1 || n != 1;
        
        //@ if (n == 1) {
        //@     assert \result == 0;
        //@ } else if (n % 2 == 0) {
        //@     assert \result == n / 2;
        //@ } else {
        //@     assert \result == n;
        //@ }
        
        return ((n == 1) ? 0 : ((n % 2 == 0) ? (n / 2) : n));
    }
}
/home/max/Documents/JMLGPT/tmp/NumberOfCutsSeq.java:9: error: Expected a declaration or a JML construct inside the JML annotation here
        //@ if (n == 1) {
                        ^
/home/max/Documents/JMLGPT/tmp/NumberOfCutsSeq.java:11: error: Expected a declaration or a JML construct inside the JML annotation here
        //@ } else if (n % 2 == 0) {
                                   ^
/home/max/Documents/JMLGPT/tmp/NumberOfCutsSeq.java:13: error: Expected a declaration or a JML construct inside the JML annotation here
        //@ } else {
                   ^
/home/max/Documents/JMLGPT/tmp/NumberOfCutsSeq.java:11: error: Expected a declaration or a JML construct inside the JML annotation here
        //@ } else if (n % 2 == 0) {
                   ^
/home/max/Documents/JMLGPT/tmp/NumberOfCutsSeq.java:9: error: Expected a declaration or a JML construct inside the JML annotation here
        //@ if (n == 1) {
            ^
5 errors

